--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -266,7 +266,7 @@
       {
         "type": "location",
         "title": "Visit Our Office",
-        "value": "Jl. H. Baping No.100 Ciracas, Jakarta Timur",
+        "value": "Jl. H. Baping No. 100 Ciracas, East Jakarta",
         "description": "Meet us in person"
       }
     ],
@@ -275,11 +275,11 @@
       "hours": [
         {
           "days": "Monday - Friday",
-          "time": "9:00 - 18:00"
+          "time": "8:00 - 17:00"
         },
         {
           "days": "Saturday",
-          "time": "9:00 - 14:00"
+          "time": "8:00 - 15:00"
         },
         {
           "days": "Sunday",
@@ -496,7 +496,7 @@
         },
         "saturday": {
           "days": "Saturday",
-          "time": "08:00 AM - 01:00 PM"
+          "time": "08:00 AM - 03:00 PM"
         },
         "sunday": {
           "days": "Sunday",
